--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="/src/assets/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Midterm Website Fitness App</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src=".\src\main.ts"></script>
   </body>
 </html>
